2013-04-10  Bin Cheng  <bin.cheng@arm.com>
	* acconfig.h (_FSEEK_OPTIMIZATION): Undef
	* newlib.hin (_FSEEK_OPTIMIZATION): Undef
	* configure.in (--disable-newlib-fseek-optimization): New option.
	* configure: Regenerated.
	* libc/stdio/fflush.c (__sflush_r): Use _FSEEK_OPTIMIZATION to
	control fseek optimization.
	* libc/stdio/fseeko.c (_fseeko_r): Ditto.
	* libc/stdio/makebuf.c (__smakebuf_r): Ditto.
	* libc/stdio64/fseeko64.c (_fseeko64_r): Ditto.

2013-04-08  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	* libc/stdio/vfieeefp.h (ldieee): Fix typo.

2013-04-02  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/posix/scandir.c (DIRSIZ): Use offsetof instead of magic
	number.

2013-03-27  Bin Cheng  <bin.cheng@arm.com>

	* acconfig.h (_FVWRITE_IN_STREAMIO): Undefine.
	* newlib.hin (_FVWRITE_IN_STREAMIO): Undefine.
	* configure.in (--disable-newlib-fvwrite-in-streamio): New option.
	* configure: Regenerated.
	* libc/stdio/fputs.c (_fputs_r): Use _FVWRITE_IN_STREAMIO to
	control __sfvwrite_r.  Add alternative implementation.
	* libc/stdio/fputws.c (_fputws_r): Ditto.
	* libc/stdio/fwrite.c (_fwrite_r): Ditto.
	* libc/stdio/puts.c (_puts_r): Ditto.
	* libc/stdio/vfprintf.c (__ssputs_r, __sfputs_r): New function.
	(_VFPRINTF_R): Use _FVWRITE_IN_STREAMIO to control vector buffer.
	(__SPRINT): Use _FVWRITE_IN_STREAMIO to control macro definition.
	* libc/stdio/vfwprintf.c (_VFWPRINTF_R): Use _FVWRITE_IN_STREAMIO
	to control vector buffer.

2013-03-26  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/stdio/local.h (_STDIO_WITH_THREAD_CANCELLATION_SUPPORT):
	New define.
	* libc/stdio/fclose.c: Use
	_STDIO_WITH_THREAD_CANCELLATION_SUPPORT.
	* libc/stdio/freopen.c: Likewise.
	* libc/stdio64/freopen64.c: Likewise.

2013-03-15  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* newlib/libc/stdio/findfp.c (glue_with_file): New.
	(__sfmoreglue): Use glue_with_file to avoid alignment problems.
